--- a/UIDesign/src/main/resources/com/mycompany/fileManager/signup.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/signup.fxml
@@ -21,12 +21,12 @@
             </LinearGradient>
          </fill>
       </Rectangle>
-      <Text fill="WHITE" layoutX="248.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Register">
+      <Text fill="WHITE" layoutX="272.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign Up">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Text>
-      <GridPane layoutX="93.0" layoutY="76.0" prefHeight="117.0" prefWidth="396.0">
+      <GridPane layoutX="93.0" layoutY="76.0" prefHeight="173.0" prefWidth="396.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -37,22 +37,25 @@
           <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
             <TextField fx:id="lastnameTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="userTextField" layoutX="261.0" layoutY="64.0" GridPane.columnIndex="1" />
+            <TextField fx:id="userTextField" layoutX="261.0" layoutY="64.0" text="Your Username" GridPane.columnIndex="1" />
             <Text fill="WHITE" layoutX="10.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LastName" GridPane.rowIndex="2" />
             <Text fill="WHITE" layoutX="10.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FirstName" GridPane.rowIndex="1" />
             <TextField fx:id="firstnameTextField" layoutX="261.0" layoutY="47.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Text fill="WHITE" layoutX="10.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" GridPane.rowIndex="3" />
-            <Text fill="WHITE" layoutX="10.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Retype Password" GridPane.rowIndex="4" />
-            <PasswordField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <PasswordField fx:id="repasswordTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Text fill="WHITE" layoutX="10.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" GridPane.rowIndex="4" />
+            <Text fill="WHITE" layoutX="10.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Retype Password" GridPane.rowIndex="5" />
+            <PasswordField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <PasswordField fx:id="repasswordTextField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Text fill="WHITE" layoutX="10.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" GridPane.rowIndex="3" />
+            <TextField fx:id="emailTextField" layoutX="208.0" layoutY="7.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
-      <Text fill="WHITE" layoutX="179.0" layoutY="285.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Already an existing user?" />
-      <Button fx:id="loginBtn" layoutX="360.0" layoutY="268.0" mnemonicParsing="false" onAction="#loginBtnHandler" text="Login" textFill="#370ac9" />
-      <Button fx:id="registerBtn" layoutX="351.0" layoutY="207.0" mnemonicParsing="false" onAction="#registerBtnHandler" text="Register" textFill="#370ac9" />
+      <Text fill="WHITE" layoutX="179.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Already an existing user?" />
+      <Button fx:id="loginBtn" layoutX="360.0" layoutY="302.0" mnemonicParsing="false" onAction="#loginBtnHandler" text="Login" textFill="#370ac9" />
+      <Button fx:id="registerBtn" layoutX="351.0" layoutY="261.0" mnemonicParsing="false" onAction="#registerBtnHandler" text="Register" textFill="#370ac9" />
    </children>
 </AnchorPane>
