--- a/UIDesign/src/main/resources/com/mycompany/fileManager/welcome.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/welcome.fxml
@@ -21,14 +21,14 @@
             </LinearGradient>
          </fill>
       </Rectangle>
-      <MenuButton layoutX="486.0" layoutY="15.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="34.0" text="Edit User">
+      <MenuButton layoutX="530.0" layoutY="15.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="34.0" text="Edit">
         <items>
           <MenuItem mnemonicParsing="false" onAction="#update" text="Update" />
           <MenuItem mnemonicParsing="false" onAction="#deleteprofile" text="Delete Profile" />
-            <MenuItem fx:id="loginBtn" mnemonicParsing="false" onAction="#logout" text="Logout" />
+            <MenuItem fx:id="login" mnemonicParsing="false" onAction="#logout" text="Logout" />
         </items>
       </MenuButton>
-      <Circle fill="WHITE" layoutX="500.0" layoutY="27.0" radius="17.0" stroke="BLACK" strokeType="INSIDE" />
+      <Circle fill="WHITE" layoutX="535.0" layoutY="27.0" radius="17.0" stroke="BLACK" strokeType="INSIDE" />
       <Text fill="WHITE" layoutX="164.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome,You Dont Have Any Files Uploaded" wrappingWidth="249.93994140625">
          <font>
             <Font name="System Bold" size="18.0" />
@@ -36,7 +36,6 @@
       </Text>
       <Button layoutX="106.0" layoutY="175.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="143.0" text="Create File" />
       <Button fx:id="upload" layoutX="300.0" layoutY="175.0" mnemonicParsing="false" onAction="#uploadHandler" prefHeight="25.0" prefWidth="143.0" text="Upload File" />
-      <Text fx:id="fileText" fill="WHITE" layoutX="106.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="143.0" />
-      <Button fx:id="view" layoutX="229.0" layoutY="127.0" mnemonicParsing="false" onAction="#viewBtn" prefHeight="25.0" prefWidth="143.0" text="View" />
+      <Button fx:id="back" layoutX="44.0" layoutY="28.0" mnemonicParsing="false" onAction="#backBtn" text="Back" />
    </children>
 </AnchorPane>
