--- a/UIDesign/src/main/resources/com/mycompany/fileManager/login.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/login.fxml
@@ -38,7 +38,7 @@
          <children>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
             <Text fill="WHITE" layoutX="10.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" GridPane.rowIndex="1" />
-            <TextField fx:id="userTextField" GridPane.columnIndex="1" />
+            <TextField fx:id="usernameTextField" GridPane.columnIndex="1" />
             <PasswordField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
