--- a/UIDesign/src/main/resources/com/mycompany/fileManager/welcome.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/welcome.fxml
@@ -34,7 +34,7 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Text>
-      <Button layoutX="106.0" layoutY="175.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="143.0" text="Create File" />
+      <Button fx:id="createFile" onAction="#createFileHandler" layoutX="106.0" layoutY="175.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="143.0" text="Create File" />
       <Button fx:id="upload" layoutX="300.0" layoutY="175.0" mnemonicParsing="false" onAction="#uploadHandler" prefHeight="25.0" prefWidth="143.0" text="Upload File" />
       <Text fx:id="fileText" fill="WHITE" layoutX="106.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="143.0" />
       <Button fx:id="view" layoutX="229.0" layoutY="127.0" mnemonicParsing="false" onAction="#viewBtn" prefHeight="25.0" prefWidth="143.0" text="View" />
