Recognizing the file structure.

--- a/UIDesign/src/main/resources/com/mycompany/fileManager/register.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/register.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.javafxapplication1.RegisterController">
+<AnchorPane id="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.RegisterController">
    <children>
       <GridPane alignment="CENTER" layoutY="124.0" prefHeight="126.0" prefWidth="600.0">
         <columnConstraints>
