--- a/UIDesign/src/main/resources/com/mycompany/fileManager/secondary.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/secondary.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.javafxapplication1.SecondaryController">
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.fileManager.SecondaryController">
     <children>
         <Label text="Users List" />
       <GridPane>
