--- a/UIDesign/src/main/resources/com/mycompany/fileManager/textEditor.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/textEditor.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.fileManager.WelcomeController">
    <children>
-      <Rectangle fx:id="back" arcHeight="5.0" arcWidth="5.0" height="500.0" onDragDetected="#backBtn" stroke="WHITE" strokeType="INSIDE" width="670.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="500.0" stroke="WHITE" strokeType="INSIDE" width="670.0">
          <fill>
             
             <LinearGradient endX="0.5528846153846154" endY="0.9515923076923077">
@@ -22,12 +22,12 @@
             </LinearGradient>
          </fill>
       </Rectangle>
-      <Text fill="WHITE" layoutX="272.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New File">
+      <Text fill="WHITE" layoutX="248.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New File">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Text>
-      <GridPane layoutX="137.0" layoutY="118.0" prefHeight="117.0" prefWidth="396.0">
+      <GridPane layoutX="93.0" layoutY="76.0" prefHeight="117.0" prefWidth="396.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -45,9 +45,7 @@
          </children>
       </GridPane>
       
-      <Button fx:id="saveBtn" layoutX="285.0" layoutY="250.0" mnemonicParsing="false" onAction="#saveBtnHandler" text="Save" textFill="#370ac9" />
-      <Text fill="WHITE" layoutX="137.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type any details into the file you are creating here. " />
-      <Button layoutX="61.0" layoutY="17.0" mnemonicParsing="false" text="Back" />
+      <Button fx:id="saveBtn" layoutX="360.0" layoutY="268.0" mnemonicParsing="false" onAction="#saveBtnHandler" text="Save" textFill="#370ac9" />
       
    </children>
 </AnchorPane>
