--- a/UIDesign/src/main/resources/com/mycompany/fileManager/welcome.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/welcome.fxml
@@ -23,26 +23,20 @@
       </Rectangle>
       <MenuButton layoutX="486.0" layoutY="15.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="34.0" text="Edit User">
         <items>
-          <MenuItem mnemonicParsing="false" text="Update" />
-          <MenuItem mnemonicParsing="false" text="Delete Profile" />
-            <MenuItem fx:id="login" mnemonicParsing="false" onAction="#logout" text="Logout" />
+          <MenuItem mnemonicParsing="false" onAction="#update" text="Update" />
+          <MenuItem mnemonicParsing="false" onAction="#deleteprofile" text="Delete Profile" />
+            <MenuItem fx:id="loginBtn" mnemonicParsing="false" onAction="#logout" text="Logout" />
         </items>
       </MenuButton>
       <Circle fill="WHITE" layoutX="500.0" layoutY="27.0" radius="17.0" stroke="BLACK" strokeType="INSIDE" />
-      <Text fill="WHITE" layoutX="197.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You Dont Have Any Files Uploaded" wrappingWidth="202.93994140625">
+      <Text fill="WHITE" layoutX="164.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome,You Dont Have Any Files Uploaded" wrappingWidth="249.93994140625">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Text>
-      <Button fx:id="createFile" layoutX="49.0" layoutY="170.0" mnemonicParsing="false" onAction="#createFileHandler" prefHeight="25.0" prefWidth="92.0" text="Create File" />
-      <Button fx:id="upload" layoutX="45.0" layoutY="264.0" mnemonicParsing="false" onAction="#uploadHandler" prefHeight="25.0" prefWidth="100.0" text="Upload File" />
-      <TableView fx:id="dataTableView" layoutX="214.0" layoutY="127.0" prefHeight="350.0" prefWidth="371.0" />
-      <Button fx:id="back" layoutX="58.0" layoutY="32.0" mnemonicParsing="false" onAction="#backBtn" text="Back" />
-      <Text fill="WHITE" layoutX="197.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome " wrappingWidth="81.93994140625">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Text>
-      <TextField fx:id="usernameTextField" layoutX="279.0" layoutY="28.0" prefHeight="25.0" prefWidth="100.0" />
+      <Button fx:id="createFile" onAction="#createFileHandler" layoutX="106.0" layoutY="175.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="143.0" text="Create File" />
+      <Button fx:id="upload" layoutX="300.0" layoutY="175.0" mnemonicParsing="false" onAction="#uploadHandler" prefHeight="25.0" prefWidth="143.0" text="Upload File" />
+      <Text fx:id="fileText" fill="WHITE" layoutX="106.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="143.0" />
+      <Button fx:id="view" layoutX="229.0" layoutY="127.0" mnemonicParsing="false" onAction="#viewBtn" prefHeight="25.0" prefWidth="143.0" text="View" />
    </children>
 </AnchorPane>
