--- a/UIDesign/src/main/resources/com/mycompany/fileManager/fileList.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/fileList.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TreeTableColumn?>
@@ -8,12 +14,21 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1114.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1114.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="689.0" layoutX="4.0" stroke="BLACK" strokeType="INSIDE" width="716.0">
+         <fill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#350ab8" />
+                  <Stop color="#17055a" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Rectangle>
       <ScrollPane layoutY="248.0" prefHeight="502.0" prefWidth="1114.0">
          <content>
-            <TreeTableView prefHeight="559.0" prefWidth="1099.0">
+            <TreeTableView fx:id="fileTableView" prefHeight="559.0" prefWidth="1099.0">
               <columns>
                 <TreeTableColumn prefWidth="409.0" text="File Name" />
                 <TreeTableColumn minWidth="0.0" prefWidth="219.0" text="Created" />
@@ -23,9 +38,9 @@
             </TreeTableView>
          </content>
       </ScrollPane>
-      <Text layoutX="22.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="My Drive">
+      <Text fill="WHITE" layoutX="278.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File Storage">
          <font>
-            <Font size="37.0" />
+            <Font size="22.0" />
          </font>
       </Text>
       <Button layoutX="14.0" layoutY="180.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" text="My FIles" />
