--- a/UIDesign/src/main/resources/com/mycompany/fileManager/signup.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/signup.fxml
@@ -27,7 +27,7 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Text>
-      <GridPane layoutX="93.0" layoutY="76.0" prefHeight="117.0" prefWidth="396.0">
+      <GridPane layoutX="93.0" layoutY="76.0" prefHeight="162.0" prefWidth="396.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -38,6 +38,7 @@
           <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" />
         </rowConstraints>
          <children>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
@@ -51,13 +52,13 @@
             <Text fill="WHITE" layoutX="10.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Retype Password" GridPane.rowIndex="4" />
             <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <PasswordField fx:id="retypepasswordField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Text fill="WHITE" layoutX="10.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" GridPane.rowIndex="5"/> 
+            <Text fill="WHITE" layoutX="10.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" GridPane.rowIndex="5" /> 
             <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             
          </children>
       </GridPane>
-      <Text fill="WHITE" layoutX="179.0" layoutY="285.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Already an existing user?" />
-      <Button fx:id="loginBtn" layoutX="360.0" layoutY="268.0" mnemonicParsing="false" onAction="#loginBtnHandler" text="Login" textFill="#370ac9" />
-      <Button fx:id="registerBtn" layoutX="351.0" layoutY="26" mnemonicParsing="false" onAction="#registerBtnHandler" text="Register" textFill="#370ac9" />
+      <Text fill="WHITE" layoutX="179.0" layoutY="310.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Already an existing user?" />
+      <Button fx:id="loginBtn" layoutX="360.0" layoutY="293.0" mnemonicParsing="false" onAction="#loginBtnHandler" text="Login" textFill="#370ac9" />
+      <Button fx:id="registerBtn" layoutX="351.0" layoutY="250.0" mnemonicParsing="false" onAction="#registerBtnHandler" text="Register" textFill="#370ac9" />
    </children>
 </AnchorPane>
