--- a/UIDesign/src/main/resources/com/mycompany/fileManager/textEditor.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/textEditor.fxml
@@ -27,25 +27,15 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Text>
-      <GridPane layoutX="93.0" layoutY="76.0" prefHeight="117.0" prefWidth="396.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-                       <TextArea fx:id="fileContent" />
-            
-         </children>
-      </GridPane>
+                 <TextArea fx:id="fileContent" layoutX="179.0" layoutY="101.0" prefHeight="140.0" prefWidth="312.0" />
       
-      <Button fx:id="saveBtn" layoutX="360.0" layoutY="268.0" mnemonicParsing="false" onAction="#saveBtnHandler" text="Save" textFill="#370ac9" />
+      <Button fx:id="saveBtn" layoutX="292.0" layoutY="264.0" mnemonicParsing="false" onAction="#saveBtnHandler" text="Save" textFill="#370ac9" />
+      <Text fill="WHITE" layoutX="193.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Write into the file you are creating here">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Text>
+      <Button fx:id="welcome" layoutX="44.0" layoutY="27.0" mnemonicParsing="false" onAction="#welcomeBtn" text="Back" />
       
    </children>
 </AnchorPane>
