--- a/UIDesign/src/main/resources/com/mycompany/fileManager/welcome.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/welcome.fxml
@@ -21,22 +21,25 @@
             </LinearGradient>
          </fill>
       </Rectangle>
-      <MenuButton layoutX="486.0" layoutY="15.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="34.0" text="Edit User">
-        <items>
-          <MenuItem mnemonicParsing="false" onAction="#update" text="Update" />
-          <MenuItem mnemonicParsing="false" onAction="#deleteprofile" text="Delete Profile" />
-            <MenuItem fx:id="loginBtn" mnemonicParsing="false" onAction="#logout" text="Logout" />
-        </items>
-      </MenuButton>
-      <Circle fill="WHITE" layoutX="500.0" layoutY="27.0" radius="17.0" stroke="BLACK" strokeType="INSIDE" />
-      <Text fill="WHITE" layoutX="164.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome,You Dont Have Any Files Uploaded" wrappingWidth="249.93994140625">
+      <Circle fill="WHITE" layoutX="538.0" layoutY="27.0" radius="17.0" stroke="BLACK" strokeType="INSIDE" />
+      <Text fill="WHITE" layoutX="229.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You Dont Have Any Files Uploaded" wrappingWidth="155.93994140625">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
       </Text>
-      <Button fx:id="createFile" onAction="#createFileHandler" layoutX="106.0" layoutY="175.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="143.0" text="Create File" />
-      <Button fx:id="upload" layoutX="300.0" layoutY="175.0" mnemonicParsing="false" onAction="#uploadHandler" prefHeight="25.0" prefWidth="143.0" text="Upload File" />
-      <Text fx:id="fileText" fill="WHITE" layoutX="106.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="143.0" />
-      <Button fx:id="view" layoutX="229.0" layoutY="127.0" mnemonicParsing="false" onAction="#viewBtn" prefHeight="25.0" prefWidth="143.0" text="View" />
+      <Button fx:id="createFile" layoutX="19.0" layoutY="167.0" mnemonicParsing="false" onAction="#createFileHandler" prefHeight="25.0" prefWidth="143.0" text="Create File" />
+      <Button fx:id="upload" layoutX="20.0" layoutY="217.0" mnemonicParsing="false" onAction="#uploadHandler" prefHeight="25.0" prefWidth="143.0" text="Upload File" />
+      <TableView fx:id="dataTableView" layoutX="231.0" layoutY="119.0" prefHeight="356.0" prefWidth="356.0" />
+      <TextField fx:id="usernameTextField" layoutX="204.0" layoutY="28.0" prefHeight="25.0" prefWidth="96.0" />
+      <Text fill="WHITE" layoutX="310.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome" wrappingWidth="87.93994140625">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Text>
+      <Button fx:id="logout" layoutX="558.0" layoutY="20.0" mnemonicParsing="false" onAction="#logoutBtn" text="Logout" />
+      <Button layoutX="558.0" layoutY="48.0" mnemonicParsing="false" text="Update" />
+      <Button fx:id="delete" layoutX="557.0" layoutY="75.0" mnemonicParsing="false" onAction="#deleteuserBtn" text="Delete" />
+      <Button fx:id="back" layoutX="37.0" layoutY="20.0" mnemonicParsing="false" onAction="#backBtn" text="Back" />
+      <Button fx:id="viewfiles" layoutX="56.0" layoutY="306.0" mnemonicParsing="false" onAction="#viewfilesBtn" text="View Files" />
    </children>
 </AnchorPane>
