--- a/UIDesign/src/main/resources/com/mycompany/fileManager/welcome.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/welcome.fxml
@@ -39,7 +39,14 @@
       <Button fx:id="logout" layoutX="558.0" layoutY="20.0" mnemonicParsing="false" onAction="#logoutBtn" text="Logout" />
       <Button layoutX="558.0" layoutY="48.0" mnemonicParsing="false" text="Update" />
       <Button fx:id="delete" layoutX="557.0" layoutY="75.0" mnemonicParsing="false" onAction="#deleteuserBtn" text="Delete" />
-      <Button fx:id="back" layoutX="37.0" layoutY="20.0" mnemonicParsing="false" onAction="#backBtn" text="Back" />
-      <Button fx:id="viewfiles" layoutX="56.0" layoutY="306.0" mnemonicParsing="false" onAction="#viewfilesBtn" text="View Files" />
+      <Button fx:id="viewfiles" layoutX="39.0" layoutY="410.0" mnemonicParsing="false" onAction="#viewfilesBtn" text="File Storage" />
+      <MenuButton fx:id="Upload" layoutX="29.0" layoutY="272.0" mnemonicParsing="false" text="Upload">
+        <items>
+          <MenuItem mnemonicParsing="false" onAction="#delete" text="Delete" />
+            <MenuItem mnemonicParsing="false" onAction="#rename" text="Rename" />
+            <MenuItem mnemonicParsing="false" onAction="#move" text="Move" />
+            <MenuItem mnemonicParsing="false" onAction="#copy" text="Copy" />
+        </items>
+      </MenuButton>
    </children>
 </AnchorPane>
