welcome controller edited

--- a/UIDesign/src/main/resources/com/mycompany/fileManager/welcome.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/welcome.fxml
@@ -37,9 +37,8 @@
          </font>
       </Text>
       <Button fx:id="logout" layoutX="558.0" layoutY="20.0" mnemonicParsing="false" onAction="#logoutBtn" text="Logout" />
-      <Button layoutX="558.0" layoutY="48.0" mnemonicParsing="false" text="Update" />
+      <Button fx:id="updateuser" layoutX="558.0" layoutY="48.0" mnemonicParsing="false" onAction="#updateuserBtn" text="Update" />
       <Button fx:id="delete" layoutX="557.0" layoutY="75.0" mnemonicParsing="false" onAction="#deleteuserBtn" text="Delete" />
-      <Button fx:id="viewfiles" layoutX="39.0" layoutY="410.0" mnemonicParsing="false" onAction="#viewfilesBtn" text="File Storage" />
       <MenuButton fx:id="Upload" layoutX="29.0" layoutY="272.0" mnemonicParsing="false" text="Upload">
         <items>
           <MenuItem mnemonicParsing="false" onAction="#delete" text="Delete" />
