--- a/UIDesign/src/main/resources/com/mycompany/fileManager/admin.fxml
+++ b/UIDesign/src/main/resources/com/mycompany/fileManager/admin.fxml
@@ -31,14 +31,8 @@
             </LinearGradient>
          </fill>
       </Rectangle>
-      <TableView layoutX="30.0" layoutY="82.0" prefHeight="327.0" prefWidth="146.0">
-        <columns>
-          <TableColumn prefWidth="75.0" text="User" />
-          <TableColumn prefWidth="75.0" text="File" />
-        </columns>
-      </TableView>
       <Button fx:id="back" layoutX="48.0" layoutY="14.0" mnemonicParsing="false" onAction="#backBtn" text="Back" />
-      <TextArea layoutX="222.0" layoutY="90.0" prefHeight="327.0" prefWidth="411.0" />
-      <Button layoutX="384.0" layoutY="57.0" mnemonicParsing="false" text="Error" />
+      <TextArea fx:id="adminerror" layoutX="145.0" layoutY="91.0" prefHeight="327.0" prefWidth="411.0" />
+      <Button layoutX="334.0" layoutY="51.0" mnemonicParsing="false" text="Error" />
    </children>
 </AnchorPane>
